--- a/ElReg/elreg_app/templates/patient.html
+++ b/ElReg/elreg_app/templates/patient.html
@@ -47,37 +47,37 @@
     <div class="control-group">
         <label class="control-label" for="lastName">Фамилия<span class="text-error">*</span></label>
         <div class="controls">
-            <input type="text" class="span4" name="lastName" id="lastName" value="{{ lastName }}" autocomplete="on" placeholder="Иванов" />
+            <input type="text" class="span4" name="lastName" id="lastName" value="{{ lastName|default_if_none:"" }}" autocomplete="on" placeholder="Иванов" />
         </div>
     </div>
     <div class="control-group">
         <label class="control-label" for="firstName">Имя<span class="text-error">*</span></label>
         <div class="controls">
-            <input type="text" class="span4" name="firstName" id="firstName" value="{{ firstName }}" maxlength="40" size="30" autocomplete="on" placeholder="Иван" />
+            <input type="text" class="span4" name="firstName" id="firstName" value="{{ firstName|default_if_none:"" }}" maxlength="40" size="30" autocomplete="on" placeholder="Иван" />
         </div>
     </div>
 
     <div class="control-group">
         <label class="control-label" for="patronymic">Отчество<span class="text-error">*</span></label>
         <div class="controls">
-            <input type="text" class="span4" name="patronymic" id="patronymic" value="{{ patronymic }}" maxlength="40" size="30" autocomplete="on" placeholder="Иванович" />
+            <input type="text" class="span4" name="patronymic" id="patronymic" value="{{ patronymic|default_if_none:"" }}" maxlength="40" size="30" autocomplete="on" placeholder="Иванович" />
         </div>
     </div>
 
     <div class="control-group">
         <label class="control-label" for="dd">Дата рождения<span class="text-error">*</span></label>
         <div class="controls">
-            <input type="text" class="span1" name="dd" id="dd" value="{{ dd }}" maxlength="2" size="2" autocomplete="on" placeholder="01" />
-            <input type="text" class="span1" name="mm" id="mm" value="{{ mm }}" maxlength="2" size="2" autocomplete="on" placeholder="12" />
-            <input type="text" class="span1" name="yy" id="yy" value="{{ yy }}" maxlength="4" size="4" autocomplete="on" placeholder="2001" />
+            <input type="text" class="span1" name="dd" id="dd" value="{{ dd|default_if_none:"" }}" maxlength="2" size="2" autocomplete="on" placeholder="01" />
+            <input type="text" class="span1" name="mm" id="mm" value="{{ mm|default_if_none:"" }}" maxlength="2" size="2" autocomplete="on" placeholder="12" />
+            <input type="text" class="span1" name="yy" id="yy" value="{{ yy|default_if_none:"" }}" maxlength="4" size="4" autocomplete="on" placeholder="2001" />
         </div>
     </div>
 
     <div class="control-group">
         <label class="control-label" for="radio1">Пол<span class="text-error">*</span></label>
         <div class="controls">
-            <input type="radio" name="radio" id="radio1" value="1"{% if request.POST.radio == '1' %}checked="checked"{% endif %} /> М
-            <input type="radio" name="radio" id="radio2" value="2"{% if request.POST.radio == '2' %}checked="checked"{% endif %} /> Ж
+            <input type="radio" name="radio" id="radio1" value="1"{% if request.POST.radio == '1' or sex == '1' %}checked="checked"{% endif %} /> М
+            <input type="radio" name="radio" id="radio2" value="2"{% if request.POST.radio == '2' or sex == '2' %}checked="checked"{% endif %} /> Ж
         </div>
     </div>
 
@@ -85,13 +85,13 @@
 
     <div class="control-group">
         <div class="controls">
-            <input id="chb" value="1" name="send_email" type="checkbox"{% if request.POST.send_email %}checked="checked"{% endif %} /> - отправить информацию о записи на электронный адрес
+            <input id="chb" value="1" name="send_email" type="checkbox"{% if request.POST.send_email or send_email %}checked="checked"{% endif %} /> - отправить информацию о записи на электронный адрес
         </div>
     </div>
     <div class="control-group">
         <label class="control-label" for="email">Адрес электронной почты</label>
         <div class="controls">
-            <input type="text" class="span4" name="email" id="email" value="{{ userEmail }}" maxlength="50" size="35" {% if not request.POST.send_email %}disabled="disabled"{% endif %} autocomplete="on" placeholder="example@email.ru" />
+            <input type="text" class="span4" name="email" id="email" value="{{ userEmail|default_if_none:"" }}" maxlength="50" size="35" {% if not request.POST.send_email and not send_email %}disabled="disabled"{% endif %} autocomplete="on" placeholder="example@email.ru" />
         </div>
     </div>
 
