Объединение гор2 и гор3

--- a/ElReg/elreg_app/templates/medical_institution.html
+++ b/ElReg/elreg_app/templates/medical_institution.html
@@ -62,7 +62,7 @@
 <div id="gor2Modal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-        <h3 id="myModalLabel">Запись на приём в ГБУЗ «Городская больница № 2»</h3>
+        <h3 id="myModalLabel">Запись на приём в<br>ГБУЗ «Городская больница № 2»</h3>
     </div>
     <div class="modal-body">
         <p>Для записи на прием перейдите по <a href="{% url subdivision %}16/">ссылке</a>.</p>
