--- a/blueprints/site/templates/site/index.html
+++ b/blueprints/site/templates/site/index.html
@@ -14,7 +14,7 @@
             <ul class="nav nav-tabs nav-stacked">
         {% endif %}
                 <li>
-                    <a href ="{{ url_for('medical_institution') }}{{ region.code }}/">
+                    <a href ="{{ url_for('.lpu', okato=region.code) }}/">
                         <h4>{{ region.name }}</h4>
                     </a>
                 </li>
@@ -25,6 +25,6 @@
         {% endfor %}
     </div>
     <p class="pull-right">
-        <a href="{% url medical_institution %}search/" class="btn btn-primary btn-large" title="Поиск ЛПУ">Поиск ЛПУ</a>
+        <a href="{{ url_for('.search') }}" class="btn btn-primary btn-large" title="Поиск ЛПУ">Поиск ЛПУ</a>
     </p>
 {% endblock %}
