--- a/blueprints/site/templates/site/lpu.html
+++ b/blueprints/site/templates/site/lpu.html
@@ -36,13 +36,13 @@
         <ul id="search_table" class="nav nav-tabs nav-stacked upper_case">
         {% if hospitals_list %}
             {% for hospital in hospitals_list %}
-            <li><a href="{% url subdivision %}{{ hospital.uid|slice:":2"|cut:"/" }}/">{{ hospital.name }}</a></li>
+            <li><a href="{{ url_for('.departments', lpu_id=hospital.uid) }}">{{ hospital.name }}</a></li>
             {% endfor %}
         {% endif %}
         </ul>
     </div>
 </div>
-<a href="{% url index %}" class="btn btn-primary btn-large">Вернуться</a>
+<a href="{{ url_for('.index') }}" class="btn btn-primary btn-large">Вернуться</a>
 
     <script type="text/javascript">
         function searchLpu() {
@@ -56,7 +56,7 @@
             $.getJSON("/search/", {search_lpu: search_lpu, search_gorod: search_gorod, search_rayon: search_rayon}, function(data) {
                 var $items = [];
                 $.each(data, function(key, val) {
-                    $items.push('<li><a href="{% url subdivision %}' + key + '/">' + val + '</a></li>');
+                    $items.push('<li><a href="{{ url_for('.department') }}' + key + '/">' + val + '</a></li>');
                 });
                 $("#search_table").html($items.join('')).fadeIn('fast');
             });
@@ -73,7 +73,7 @@
             $.getJSON("/search/", {search_lpu: search_lpu, search_gorod: search_gorod, search_rayon: search_rayon}, function(data) {
                 var $items = [];
                 $.each(data, function(key, val) {
-                    $items.push('<li><a href="{% url subdivision %}' + key + '/">' + val + '</a></li>');
+                    $items.push('<li><a href="{{ url_for('.department') }}' + key + '/">' + val + '</a></li>');
                 });
                 $("#search_table").html($items.join('')).fadeIn('fast');
             });
@@ -90,7 +90,7 @@
             $.getJSON("/search/", {search_lpu: search_lpu, search_gorod: search_gorod, search_rayon: search_rayon}, function(data) {
                 var $items = [];
                 $.each(data, function(key, val) {
-                    $items.push('<li><a href="{% url subdivision %}' + key + '/">' + val + '</a></li>');
+                    $items.push('<li><a href="{{ url_for('.department') }}' + key + '/">' + val + '</a></li>');
                 });
                 $("#search_table").html($items.join('')).fadeIn('fast');
             });
