Fixes in styles and tpls

--- a/blueprints/site/templates/site/_header.html
+++ b/blueprints/site/templates/site/_header.html
@@ -1,4 +1,3 @@
-<meta charset="utf-8">
 <meta content="ru-ru" http-equiv="Content-Language" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -9,7 +8,8 @@
 <link href="{{ url_for('.static', filename='i/favicon.ico') }}" rel="shortcut icon" type="image/x-icon" />
 
 <link type="text/css" rel="stylesheet" href="{{ url_for('.static', filename='css/jquery-ui/blitzer/jquery-ui-1.9.1.custom.min.css') }}" />
-<link type="text/css" rel="stylesheet" href="{{ url_for('.static', filename='bootstrap/css/bootstrap.min.css') }}" />
+<link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/bootstrap.min.css') }}" />
+<link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/bootstrap-responsive.min.css') }}" />
 <link type="text/css" rel="stylesheet" href="{{ url_for('.static', filename='css/style.css') }}" media="screen" />
 <link type="text/css" rel="stylesheet" href="{{ url_for('.static', filename='css/print.css') }}" media="print" />
 <!--[if IE 6]>
