--- a/blueprints/site/templates/site/_footer.html
+++ b/blueprints/site/templates/site/_footer.html
@@ -2,9 +2,9 @@
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
 <script type="text/javascript" src="{{ url_for('.static', filename='js/jquery-1.8.2.min.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='bootstrap/js/bootstrap.min.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('.static', filename='js/jquery.placeholder.min.js') }}"></script>
-<script type="text/javascript" src="{{ url_for('.static', filename='js/scripts.js?12') }}"></script>
-<script type="text/javascript" src="{{ url_for('.static', filename='bootstrap/js/bootstrap.min.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('.static', filename='js/scripts.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('.static', filename='js/ie6.min.js') }}"></script>
 <script type="text/javascript">jQuery('input[placeholder]').placeholder();</script>
 
