--- a/blueprints/site/templates/site/index.html
+++ b/blueprints/site/templates/site/index.html
@@ -15,7 +15,7 @@
             <ul class="nav nav-tabs nav-stacked">
         {% endif %}
                 <li>
-                    <a href ="{{ url_for('.lpu', okato=region.code) }}/">
+                    <a href ="{{ url_for('.lpu', okato=region.code) }}">
                         <h4>{{ region.name }}</h4>
                     </a>
                 </li>
