lpu page, division page

--- a/blueprints/site/templates/site/division.html
+++ b/blueprints/site/templates/site/division.html
@@ -25,5 +25,5 @@
 </div>
 </div>
 </div>
-<a href="{% url medical_institution %}" class="btn btn-primary btn-large">Вернуться</a>
+<a href="{{ url_for('.division') }}" class="btn btn-primary btn-large">Вернуться</a>
 {% endblock %}
