--- a/ElReg/elreg_app/templates/subdivision.html
+++ b/ElReg/elreg_app/templates/subdivision.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div class="alert alert-info"><h4>Выберите подразделение, специализацию и врача из списка ниже</h4></div>
 <blockquote>
     <dl class="dl-horizontal">
         <dt>Лечебное учреждение:</dt><dd>{{ current_lpu.name }}</dd>
