--- a/ElReg/elreg_app/templates/medical_institution.html
+++ b/ElReg/elreg_app/templates/medical_institution.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<legend><h3>Поиск ЛПУ:</h3></legend>
+<div class="alert alert-info"><h4>Поиск ЛПУ</h4>Выберите медицинское учреждение из списка ниже или воспользуйтесь поиском.</div>
 <div class="well well-small">
     <div class="row-fluid">
         <div class="span6">
@@ -44,56 +44,56 @@
 </div>
 <a href="{% url index %}" class="btn btn-primary btn-large">Вернуться</a>
 
-    <script type="text/javascript">
-        function searchLpu() {
-            $("#search_table").html("");
-            var search_lpu = $('#search_lpu').val();
-            var search_gorod = $('#search_gorod').val();
-            var search_rayon = $('#search_rayon').val();
-            if (!search_lpu && !search_gorod && !search_rayon){
-                return false;
-            }
-            $.getJSON("/search/", {search_lpu: search_lpu, search_gorod: search_gorod, search_rayon: search_rayon}, function(data) {
-                var $items = [];
-                $.each(data, function(key, val) {
-                    $items.push('<li><a href="{% url subdivision %}' + key + '/">' + val + '</a></li>');
-                });
-                $("#search_table").html($items.join('')).fadeIn('fast');
-            });
+<script type="text/javascript">
+    function searchLpu() {
+        $("#search_table").html("");
+        var search_lpu = $('#search_lpu').val();
+        var search_gorod = $('#search_gorod').val();
+        var search_rayon = $('#search_rayon').val();
+        if (!search_lpu && !search_gorod && !search_rayon){
+            return false;
         }
+        $.getJSON("/search/", {search_lpu: search_lpu, search_gorod: search_gorod, search_rayon: search_rayon}, function(data) {
+            var $items = [];
+            $.each(data, function(key, val) {
+                $items.push('<li><a href="{% url subdivision %}' + key + '/">' + val + '</a></li>');
+            });
+            $("#search_table").html($items.join('')).fadeIn('fast');
+        });
+    }
 
-        function searchGorod() {
-            $("#search_table").html("");
-            var search_lpu = $('#search_lpu').val();
-            var search_gorod = $('#search_gorod').val();
-            var search_rayon = $('#search_rayon').val();
-            if (!search_lpu && !search_gorod && !search_rayon){
-                return false;
-            }
-            $.getJSON("/search/", {search_lpu: search_lpu, search_gorod: search_gorod, search_rayon: search_rayon}, function(data) {
-                var $items = [];
-                $.each(data, function(key, val) {
-                    $items.push('<li><a href="{% url subdivision %}' + key + '/">' + val + '</a></li>');
-                });
-                $("#search_table").html($items.join('')).fadeIn('fast');
-            });
+    function searchGorod() {
+        $("#search_table").html("");
+        var search_lpu = $('#search_lpu').val();
+        var search_gorod = $('#search_gorod').val();
+        var search_rayon = $('#search_rayon').val();
+        if (!search_lpu && !search_gorod && !search_rayon){
+            return false;
         }
+        $.getJSON("/search/", {search_lpu: search_lpu, search_gorod: search_gorod, search_rayon: search_rayon}, function(data) {
+            var $items = [];
+            $.each(data, function(key, val) {
+                $items.push('<li><a href="{% url subdivision %}' + key + '/">' + val + '</a></li>');
+            });
+            $("#search_table").html($items.join('')).fadeIn('fast');
+        });
+    }
 
-        function searchRayon() {
-            $("#search_table").html("");
-            var search_lpu = $('#search_lpu').val();
-            var search_gorod = $('#search_gorod').val();
-            var search_rayon = $('#search_rayon').val();
-            if (!search_lpu && !search_gorod && !search_rayon){
-                return false;
-            }
-            $.getJSON("/search/", {search_lpu: search_lpu, search_gorod: search_gorod, search_rayon: search_rayon}, function(data) {
-                var $items = [];
-                $.each(data, function(key, val) {
-                    $items.push('<li><a href="{% url subdivision %}' + key + '/">' + val + '</a></li>');
-                });
-                $("#search_table").html($items.join('')).fadeIn('fast');
-            });
+    function searchRayon() {
+        $("#search_table").html("");
+        var search_lpu = $('#search_lpu').val();
+        var search_gorod = $('#search_gorod').val();
+        var search_rayon = $('#search_rayon').val();
+        if (!search_lpu && !search_gorod && !search_rayon){
+            return false;
         }
-    </script>
+        $.getJSON("/search/", {search_lpu: search_lpu, search_gorod: search_gorod, search_rayon: search_rayon}, function(data) {
+            var $items = [];
+            $.each(data, function(key, val) {
+                $items.push('<li><a href="{% url subdivision %}' + key + '/">' + val + '</a></li>');
+            });
+            $("#search_table").html($items.join('')).fadeIn('fast');
+        });
+    }
+</script>
 {% endblock %}
