--- a/ElReg/elreg_app/templates/time.html
+++ b/ElReg/elreg_app/templates/time.html
@@ -5,6 +5,7 @@
 <style>
     form{margin:0;}
 </style>
+<div class="alert alert-info"><h4>Выберите нужное свободное время из расписания врача, расположенного ниже</h4></div>
 <blockquote>
     <dl class="dl-horizontal">
         <dt>Лечебное учреждение:</dt><dd>{{ current_lpu_title }}</dd>
