--- a/blueprints/site/templates/site/division.html
+++ b/blueprints/site/templates/site/division.html
@@ -3,17 +3,17 @@
 {% block content %}
 <blockquote>
     <dl class="dl-horizontal">
-        <dt>Лечебное учреждение:</dt><dd>{{ current_lpu.name }}</dd>
-        {% if current_lpu.phone %}<dt>Телефон:</dt><dd>{{ current_lpu.phone }}</dd>{% endif %}
-        {% if current_lpu.email %}<dt>Электронная почта:</dt><dd><a href="mailto:{{ current_lpu.email }}">{{ current_lpu.email }}</a></dd>{% endif %}
+        <dt>Лечебное учреждение:</dt><dd>{{ lpu.name }}</dd>
+        {% if lpu.phone %}<dt>Телефон:</dt><dd>{{ lpu.phone }}</dd>{% endif %}
+        {% if lpu.email %}<dt>Электронная почта:</dt><dd><a href="mailto:{{ lpu.email }}">{{ lpu.email }}</a></dd>{% endif %}
     </dl>
 </blockquote>
 <div class="well">
 <div class="row-fluid">
 <div class="span4">
     <ul class="firstTable nav nav-pills nav-stacked">
-        {% for subdivision in subdivision_list %}
-            <li><a id="{{ subdivision.id }}" href="javascript:;" class="spec">{{ subdivision.name }} {% if subdivision.address %}({{ subdivision.address }}){% endif %}</a></li>
+        {% for division in lpu.buildings %}
+            <li><a id="{{ division.id }}" href="{{ url_for('.get_specialities', lpu_id=lpu_id, department_id=division.id) }}" class="division">{{ division.name }} {% if division.address %}({{ division.address }}){% endif %}</a></li>
         {% endfor %}
     </ul>
 </div>
