--- a/ElReg/elreg_app/templates/medical_institution.html
+++ b/ElReg/elreg_app/templates/medical_institution.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<legend><h3>Поиск ЛПУ:</h3></legend>
+<div class="alert alert-info"><h4>Поиск ЛПУ</h4>Выберите медицинское учреждение из списка ниже или воспользуйтесь поиском.</div>
 <div class="well well-small">
     <div class="row-fluid">
         <div class="span6">
